# pyxdu

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  LICENSE.txt  README.md  mypy.ini  pyproject.toml
.github/workflows/: pre-commit.yml  publish-to-pypi.yml  python-package.yml
pyxdu/: __main__.py  tk.py  xdu.py
tests/: test_xdu.py
