[tool.poetry]
name = "pyxdu"
version = "1.0.2"
description = "Display the output of \"du\" in a window."
authors = ["Andrey Vlasovskikh <andrey.vlasovskikh@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vlasovskikh/pyxdu"
keywords = ["gui", "disk-usage", "tkinter", "xdu", "disk-space"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: System :: Filesystems",
]

[tool.poetry.dependencies]
python = "^3.10"
docopt = "^0.6.2"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^26.3.1"}
pytest = "^9.0.3"
coverage = "^7.13.5"
pyinstrument = "^5.1.2"
pre-commit = "^4.5.1"

[tool.poetry.scripts]
pyxdu = "pyxdu.__main__:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
